# sleap-nn

./: .dockerignore  .gitattributes  .gitignore  CENTROID_ONLY_PLAN.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  environment.yml  environment_cpu.yml  environment_mac.yml  environment_osx-arm64.yml  initial_config.yaml  mkdocs.yml  preds.predictions.slp  preds.slp  prerelease  pyproject.toml  sleap_inference.nsys-rep  slumbr_config_centered_instance.yaml  training_config.yaml  versions.json
.claude/commands/: coverage.md  lint.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml  codespell.yml  docs.yml  uvpublish.yml
dev/: 404.html  CHANGELOG.html  config.html  configuration.html  index.html  installation.html  objects.inv  sitemap.xml  training.html
dev/CHANGELOG/: index.html
dev/api/: SUMMARY.html  cli.html  evaluation.html  index.html  legacy_models.html  predict.html  train.html
dev/changelog/: index.html
dev/cli/: index.html
dev/colab_notebooks/: index.html
dev/config/: index.html
dev/configuration/: index.html
dev/core_components/: index.html
dev/example_notebooks/: index.html
dev/export/: index.html
dev/getting-started/: index.html
dev/guides/: index.html
dev/inference/: index.html
dev/installation/: index.html
dev/models/: index.html
dev/reference/: index.html
dev/sample_configs/: config_bottomup_convnext.yaml  config_bottomup_unet.yaml  config_bottomup_unet_large_rf.yaml  config_centroid_swint.yaml  config_centroid_unet.yaml  config_centroid_unet_standalone.yaml  config_multi_class_bottomup_unet.yaml  config_semantic_segmentation_unet.yaml  config_single_instance_unet.yaml  config_single_instance_unet_large_rf.yaml  config_single_instance_unet_medium_rf.yaml  config_topdown_centered_instance_segmentation_unet.yaml  config_topdown_centered_instance_unet.yaml  config_topdown_centered_instance_unet_large_rf.yaml  config_topdown_centered_instance_unet_medium_rf.yaml  config_topdown_multi_class_centered_instance_unet.yaml
dev/search/: search_index.json
dev/step_by_step_guide/: index.html
dev/step_by_step_tutorial/: index.html
dev/training/: index.html
dev/tutorials/: index.html
docs/: cli.md  config.md  config_bottomup.yaml  config_bottomup_convnext.yaml  config_bottomup_unet.yaml  config_centroid.yaml  config_centroid_swint.yaml  config_centroid_unet.yaml  config_multi_class_bottomup.yaml  config_multi_class_bottomup_unet.yaml  config_multi_head.yaml  config_single_instance.yaml  config_single_instance_unet.yaml  config_slumbr.yaml  config_topdown_centered_instance.yaml  config_topdown_centered_instance_unet.yaml  config_topdown_multi_class_centered_instance.yaml  config_topdown_multi_class_centered_instance_unet.yaml  configuration.md  core_components.md  example_notebooks.md  export.md  index.md  inference.md  installation.md  models.md  performance_hotspots.md  step_by_step_guide.md  step_by_step_tutorial.md  training.md
docs/colab_notebooks/: Training_with_sleap_nn_on_colab.ipynb  index.md
docs/configuration/: data.md  index.md  model.md  samples.md  trainer.md
docs/getting-started/: first-model.md  index.md  quickstart.md
docs/guides/: centroid-only-inference.md  config-generator.md  embedding-tracking.md  evaluation.md  export.md  index.md  inference-api.md  inference-guide.md  inference-performance.md  inference.md  monitoring.md  multi-gpu.md  negative-frames.md  overview.md  post-processing-filters.md  pretrained-backbones.md  resume-finetune.md  sam-inference-segmentation.md  segmentation.md  semantic-segmentation.md  supervised-id.md  tiling.md  topdown-segmentation.md  tracking.md  training-guide.md  training.md
docs/help/: faq.md
docs/reference/: api.md  cli.md  evaluation_metrics.md  index.md  models.md  overview.md
docs/sample_configs/: config_bottomup_convnext.yaml  config_bottomup_segmentation_pretrained.yaml  config_bottomup_segmentation_unet.yaml  config_bottomup_unet.yaml  config_bottomup_unet_large_rf.yaml  config_bottomup_unet_medium_rf.yaml  config_centroid_swint.yaml  config_centroid_unet.yaml  config_centroid_unet_standalone.yaml  config_embedding_convnext.yaml  config_multi_class_bottomup_unet.yaml  config_semantic_segmentation_unet.yaml  config_single_instance_unet.yaml  (+7 more)
docs/tutorials/: index.md  (+2 more)
example_notebooks/: README.md  augmentation_guide.py  receptive_field_guide.py  training_demo.py
scripts/: gen_announcements.py  gen_changelog.py  gen_ref_pages.py
sleap_nn/: __init__.py  cli.py  evaluation.py  launcher.py  legacy_config_converter.py  legacy_models.py  legacy_predict.py  model_info.py  model_trainer.py  paf_grouping.py  predict.py  system_info.py  tracking.py  train.py  train_worker.py
tests/: __init__.py  conftest.py  test_architecture_estimates.py  test_cli.py  test_config_generator.py  test_config_generator_yaml.py  test_dataset.py  test_evaluation.py  test_instance_centroids.py  test_legacy_inference.py  test_legacy_models.py  test_model_info.py  test_model_trainer.py  test_paf_grouping.py  test_parallel_caching.py  test_predict.py  test_providers.py  test_public_api.py  test_segmentation.py  test_segmentation_eval.py  test_semantic_segmentation.py  test_sleap_io_0_8_0_compat.py  test_system_info.py  test_train.py  test_version.py
tools/: nsight_inference_example.py
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.5/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0a1/: 404.html  index.html  sitemap.xml
v0.1.0a2/: 404.html  index.html  sitemap.xml
v0.1.0a3/: 404.html  index.html  sitemap.xml
v0.1.0a4/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
(+2260 files in other folders)
