[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sleap-nn"
authors = [
    {name = "Divya Seshadri Murali", email = "dimurali@salk.edu"},
    {name = "Elizabeth Berrigan", email = "eberrigan@salk.edu"},
    {name = "Vincent Tu", email = "vitu@ucsd.edu"},
    {name = "Liezl Maree", email = "lmaree@salk.edu"},
    {name = "David Samy", email = "davidasamy@gmail.com"},
    {name = "Talmo Pereira", email = "talmo@salk.edu"}
]
description = "Neural network backend for training and inference for animal pose estimation."
requires-python = ">=3.11,<3.14"
keywords = ["sleap", "pose estimation", "deep learning", "neural networks", "computer vision", "animal behavior"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sleap-io>=0.2.0",
    "numpy",
    "lightning",
    "kornia",
    "jsonpickle",
    "scipy",
    "attrs",
    "omegaconf",
    "wandb",
    "matplotlib",
    "seaborn",
    "rich",
    "loguru",
    "psutil",
    "opencv-python",
    "hydra-core",
    "jupyter",
    "jupyterlab",
    "pyzmq"
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["sleap_nn"]

[tool.setuptools.dynamic]
version = {attr = "sleap_nn.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}

[project.optional-dependencies]
torch = [
    "torch",
    "torchvision<0.24.0",
]
torch-cpu = [
    "torch",
    "torchvision<0.24.0",
]
torch-cuda118 = [
    "torch",
    "torchvision<0.24.0",
]
torch-cuda128 = [
    "torch",
    "torchvision<0.24.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "pydocstyle",
    "toml",
    "twine",
    "build",
    "ipython",
    "ruff"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mike",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index"
]

[project.scripts]
sleap-nn = "sleap_nn.cli:cli"

[project.urls]
Homepage = "https://sleap.ai"
Repository = "https://github.com/talmolab/sleap-nn"

[tool.uv]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cuda118" },
        { extra = "torch-cuda128" }
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cuda118" },
    { index = "pytorch-cu128", extra = "torch-cuda128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cuda118" },
    { index = "pytorch-cu128", extra = "torch-cuda128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
