[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sleap-nn"
authors = [
    { name = "Divya Seshadri Murali", email = "dimurali@salk.edu" },
    { name = "Elizabeth Berrigan", email = "eberrigan@salk.edu" },
    { name = "Vincent Tu", email = "vitu@ucsd.edu" },
    { name = "Liezl Maree", email = "lmaree@salk.edu" },
    { name = "David Samy", email = "davidasamy@gmail.com" },
    { name = "Talmo Pereira", email = "talmo@salk.edu" },
]
description = "Neural network backend for training and inference for animal pose estimation."
requires-python = ">=3.11,<3.14"
keywords = [
    "sleap",
    "pose estimation",
    "deep learning",
    "neural networks",
    "computer vision",
    "animal behavior",
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sleap-io>=0.6.2,<0.7.0",
    "numpy",
    "lightning",
    "kornia",
    "jsonpickle",
    "scipy",
    "attrs",
    "omegaconf",
    "wandb",
    "matplotlib",
    "seaborn",
    "rich",
    "loguru",
    "psutil",
    "opencv-python",
    "hydra-core",
    "jupyter",
    "jupyterlab",
    "pyzmq",
    "rich-click>=1.9.5",
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["sleap_nn"]

[tool.setuptools.dynamic]
version = { attr = "sleap_nn.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[project.optional-dependencies]
torch = ["torch", "torchvision>=0.20.0"]
torch-cpu = ["torch", "torchvision>=0.20.0"]
torch-cuda118 = ["torch", "torchvision>=0.20.0"]
torch-cuda128 = ["torch", "torchvision>=0.20.0"]
torch-cuda130 = ["torch", "torchvision>=0.20.0"]
export = ["onnx>=1.15.0", "onnxruntime>=1.16.0", "onnxscript>=0.1.0"]
export-gpu = ["onnx>=1.15.0", "onnxruntime-gpu>=1.16.0", "onnxscript>=0.1.0"]
tensorrt = ["tensorrt>=10.0.0", "torch-tensorrt>=2.0.0"]

[dependency-groups]
# PEP 735: Dev-only dependencies (`dev` is installed automatically by `uv sync`)
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "pydocstyle",
    "toml",
    "twine",
    "build",
    "ipython",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mike",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[project.scripts]
sleap-nn = "sleap_nn.cli:cli"

[project.urls]
Homepage = "https://sleap.ai"
Repository = "https://github.com/talmolab/sleap-nn"

[tool.uv]
# Only resolve for platforms we actually support (excludes win_arm64 which has incomplete pytorch wheels)
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
# Exclude torchvision builds that only have win_arm64 wheels
constraint-dependencies = [
    "torchvision!=0.24.1+d801a34",
]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cuda118" },
        { extra = "torch-cuda128" },
        { extra = "torch-cuda130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cuda118", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cu128", extra = "torch-cuda128", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cu130", extra = "torch-cuda130", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cuda118", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cu128", extra = "torch-cuda128", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cu130", extra = "torch-cuda130", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D", # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
